RESOLVED FIXED36274
CSS3 :nth-child selector 'odd' keyword case sensitivity test fails
https://bugs.webkit.org/show_bug.cgi?id=36274
Summary CSS3 :nth-child selector 'odd' keyword case sensitivity test fails
Simon Fraser (smfr)
Reported 2010-03-17 20:18:48 PDT
Created attachment 51000 [details] Testcase The test in the URL fails.
Attachments
Testcase (1.86 KB, text/html)
2010-03-17 20:18 PDT, Simon Fraser (smfr)
no flags
Patch (4.46 KB, patch)
2010-03-18 11:33 PDT, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2010-03-18 11:33:10 PDT
Dave Hyatt
Comment 2 2010-03-18 12:49:26 PDT
Comment on attachment 51064 [details] Patch r=me
Simon Fraser (smfr)
Comment 3 2010-03-18 14:15:25 PDT
Note You need to log in before you can comment on or make changes to this bug.