2010-03-18  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=36274
        CSS3 :nth-child selector 'odd' keyword case sensitivity test fails

        The tests for "odd", "even" etc. for nth-child selectors should be case insensitive.

        Test: fast/css/nth-child-odd-case-insensitive.html

        * css/CSSSelector.cpp:
        (WebCore::CSSSelector::RareData::parseNth):

git-svn-id: svn://svn.chromium.org/blink/trunk@56191 bbb929c8-8fbe-4397-9dbb-9b2b20218538