third_party/WebKit/WebCore/css/CSSSelector.cpp
@@ -570,7 +570,7 @@ bool CSSSelector::matchNth(int count)
 // a helper function for parsing nth-arguments
 bool CSSSelector::RareData::parseNth()
 {    
-    const String& argument = m_argument;
+    const String& argument = m_argument.lower();
     
     if (argument.isEmpty())
         return false;
